--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,8 @@
     "source": "https://github.com/poweradmin/poweradmin"
   },
   "require": {
-    "php": ">=7.4.0",
-    "twig/twig": "~1.0",
-    "twig/extensions": "^1.3"
+    "php": ">=7.2.0",
+    "twig/twig": "1.44.6"
   },
   "autoload": {
     "psr-4": {
