--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   },
   "require": {
     "php": ">=7.2.0",
-    "twig/twig": "1.44.6"
+    "twig/twig": "~1.0",
+    "twig/extensions": "^1.3"
   },
   "autoload": {
     "psr-4": {
