--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
   "require": {
     "php": ">=7.2.0",
     "twig/twig": "~1.0",
-    "twig/extensions": "^1.3"
+    "twig/extensions": "^1.3",
+    "ext-intl": "*",
+    "ext-gettext": "*"
   },
   "autoload": {
     "psr-4": {
