--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-# open_collective: edmondas
+open_collective: poweradmin
 # ko_fi: edmondas
 # liberapay: edmondas
-custom: [paypal.me/egirkantas]
+# custom: [paypal.me/egirkantas]
