--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -3,4 +3,4 @@
 open_collective: poweradmin
 # ko_fi: edmondas
 # liberapay: edmondas
-# custom: [paypal.me/egirkantas]
+custom: [paypal.me/egirkantas]
