--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "php": ">=7.2.5",
     "ext-intl": "*",
     "ext-gettext": "*",
+    "ext-openssl": "*",
     "twig/twig": "^2.0",
     "twig/extensions": "^1.5"
   },
