Move dependency check to composer.

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "ext-intl": "*",
     "ext-gettext": "*",
     "ext-openssl": "*",
+    "ext-pdo": "*",
     "twig/twig": "^2.0",
     "twig/extensions": "^1.5"
   },
