Added validation library, refactored adding of permission templates to use validation and to be like MVC.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "ext-openssl": "*",
     "ext-pdo": "*",
     "twig/twig": "^v2.15",
-    "twig/extensions": "^v1.5"
+    "twig/extensions": "^v1.5",
+    "vlucas/valitron": "^1.4"
   },
   "autoload": {
     "psr-4": {
