--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
     "ext-pdo": "*",
     "twig/twig": "^v3.7.1",
     "vlucas/valitron": "^v1.4.11",
-    "symfony/twig-bridge": "^v6.3.5",
-    "symfony/translation": "^v6.3.3",
-    "twbs/bootstrap": "^5.3",
-    "twbs/bootstrap-icons": "^1.11"
+    "symfony/twig-bridge": "^v6.3.8",
+    "symfony/translation": "^v6.3.7",
+    "twbs/bootstrap": "^v5.3.2",
+    "twbs/bootstrap-icons": "^v1.11.1"
   },
   "autoload": {
     "psr-4": {
@@ -30,7 +30,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.4.0"
+    "phpunit/phpunit": "^10.4.2"
   },
   "scripts": {
     "docs": "tools/phpDocumentor",
