refactor: transform installer helper utils into class.

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
   },
   "autoload": {
     "psr-4": {
-      "Poweradmin\\": "lib/"
+      "Poweradmin\\": "lib/",
+      "PoweradminInstall\\": "install/helpers"
     }
   },
   "require-dev": {
