chore: update pdns.conf configuration for API access

--- a/.devcontainer/pdns.conf
+++ b/.devcontainer/pdns.conf
@@ -4,8 +4,10 @@ gmysql-user=pdns
 gmysql-password=poweradmin
 gmysql-dbname=pdns
 
-api=yes
 webserver=yes
 webserver-address=0.0.0.0
 webserver-port=8081
+webserver-allow-from=192.168.0.0/16,127.0.0.1,::1
+
+api=yes
 api-key=fxiBmBFx7MITw5ECRMOr10ghlxGMvWZA
