chore: enable dnssec in dev container.

--- a/.devcontainer/pdns.conf
+++ b/.devcontainer/pdns.conf
@@ -3,6 +3,7 @@ gmysql-host=db
 gmysql-user=pdns
 gmysql-password=poweradmin
 gmysql-dbname=pdns
+gmysql-dnssec=yes
 
 webserver=yes
 webserver-address=0.0.0.0
