--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -3,8 +3,22 @@ DB_PASSWORD=poweradmin
 DB_NAME=pdns
 DB_ROOT_PASSWORD=uberuser
 
-MARIADB_VERSION=10.11
-#MARIADB_VERSION=11.3
+DB_IMAGE=mariadb
+#DB_IMAGE=mysql
+#DB_IMAGE=percona/percona-server
+
+# MySQL
+#DB_VERSION=9.0
+#DB_VERSION=8.4
+#DB_VERSION=8.0
+
+# MariaDB
+DB_VERSION=10.11
+#DB_VERSION=11.4
+
+# Percona Server
+#DB_VERSION=5.7
+#DB_VERSION=8.0
 
 #PHP_VERSION=8
 #PHP_VERSION=8.2
