--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - db
 
   db:
-    image: mariadb:${MARIADB_VERSION}
+    image: ${DB_IMAGE}:${DB_VERSION}
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
@@ -24,7 +24,8 @@ services:
     ports:
       - "3306:3306"
     healthcheck:
-      test: [ "CMD", "healthcheck.sh", "--su-mysql", "--connect", "--innodb_initialized" ]
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+#      test: [ "CMD", "healthcheck.sh", "--su-mysql", "--connect", "--innodb_initialized" ]
       start_period: 1m
       start_interval: 10s
       interval: 1m
