chore: update devcontainer configuration for multi-database support

--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -3,22 +3,26 @@ DB_PASSWORD=poweradmin
 DB_NAME=pdns
 DB_ROOT_PASSWORD=uberuser
 
-DB_IMAGE=mariadb
-#DB_IMAGE=mysql
-#DB_IMAGE=percona/percona-server
+MYSQL_IMAGE=mariadb
+#MYSQL_IMAGE=mysql
+#MYSQL_IMAGE=percona/percona-server
 
 # MySQL
-#DB_VERSION=9.0
-#DB_VERSION=8.4
-#DB_VERSION=8.0
+#MYSQL_VERSION=9.0
+#MYSQL_VERSION=8.4
+#MYSQL_VERSION=8.0
 
 # MariaDB
-DB_VERSION=10.11
-#DB_VERSION=11.4
+MYSQL_VERSION=10.11
+#MYSQL_VERSION=11.4
 
 # Percona Server
-#DB_VERSION=5.7
-#DB_VERSION=8.0
+#MYSQL_VERSION=5.7
+#MYSQL_VERSION=8.0
+
+# PostgreSQL
+PGSQL_IMAGE=postgres
+PGSQL_VERSION=16.3
 
 #PHP_VERSION=8
 #PHP_VERSION=8.3
