--- a/.devcontainer/pdns.conf
+++ b/.devcontainer/pdns.conf
@@ -1,9 +1,15 @@
-launch=gmysql
-gmysql-host=db
+launch=gmysql,gpgsql
+gmysql-host=mysql
 gmysql-user=pdns
 gmysql-password=poweradmin
 gmysql-dbname=pdns
 gmysql-dnssec=yes
+
+gpgsql-host=pgsql
+gpgsql-user=pdns
+gpgsql-password=poweradmin
+gpgsql-dbname=pdns
+gpgsql-dnssec=yes
 
 webserver=yes
 webserver-address=0.0.0.0
