--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
   },
   "forwardPorts": [
     "app:8080",
-    "db:3306",
+    "mysql:3306",
+    "pgsql:5432",
     "dns:1053",
     "dns:8081"
   ],
@@ -16,8 +17,11 @@
     "app:8080": {
       "label": "Poweradmin"
     },
-    "db:3306": {
+    "mysql:3306": {
       "label": "MariaDB"
+    },
+    "pgsql:5432": {
+      "label": "PostgreSQL"
     },
     "dns:1053": {
       "label": "PowerDNS"
