chore: only one dnssec backend can be enabled at once.

--- a/.devcontainer/pdns.conf
+++ b/.devcontainer/pdns.conf
@@ -1,4 +1,5 @@
 launch=gmysql,gpgsql
+
 gmysql-host=mysql
 gmysql-user=pdns
 gmysql-password=poweradmin
@@ -9,7 +10,7 @@ gpgsql-host=pgsql
 gpgsql-user=pdns
 gpgsql-password=poweradmin
 gpgsql-dbname=pdns
-gpgsql-dnssec=yes
+#gpgsql-dnssec=yes
 
 webserver=yes
 webserver-address=0.0.0.0
