chore: chore: add default SOA content to pdns.conf

--- a/.devcontainer/pdns.conf
+++ b/.devcontainer/pdns.conf
@@ -19,3 +19,5 @@ webserver-allow-from=192.168.0.0/16,127.0.0.1,::1
 
 api=yes
 api-key=fxiBmBFx7MITw5ECRMOr10ghlxGMvWZA
+
+default-soa-content=ns-1.@ admin.@ 0 10800 3600 604800 3600
