chore(devcontainer): adjust nginx timeouts and add network config for DB services

--- a/.devcontainer/conf/nginx.conf
+++ b/.devcontainer/conf/nginx.conf
@@ -8,10 +8,11 @@ server {
     }
 
     location ~ \.php$ {
-        include fastcgi_params;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_read_timeout 180;
+        include fastcgi_params;
     }
 
     error_log /var/log/nginx/error.log;
