--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,13 @@ inc/config.inc.php
 scripts
 templates/custom
 
-# Misc
+# OS generated files
 .DS_Store
-.vagrant
+.DS_Store?
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # IDE
 nbproject
@@ -26,3 +30,15 @@ tools
 
 # Devcontainer
 .devcontainer/scripts/pdns
+
+# Dependency directories
+node_modules/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Cypress
+cypress/videos
+cypress/screenshots
