--- a/composer.json
+++ b/composer.json
@@ -35,12 +35,15 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^10.4.2",
-    "squizlabs/php_codesniffer": "*"
+    "squizlabs/php_codesniffer": "^3.0"
   },
   "scripts": {
     "docs": "tools/phpDocumentor",
     "tests": "phpunit",
+    "check:index": "phpcs --standard=phpcs.xml index.php",
+    "check:inc": "phpcs --standard=phpcs.xml inc",
     "check:install": "phpcs --standard=phpcs.xml install",
-    "check": "phpcs --config-set "
+    "check:lib": "phpcs --standard=phpcs.xml lib",
+    "check:tests": "phpcs --standard=phpcs.xml tests"
   }
 }
