ci: add install folder linting step to GitHub Actions

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -32,6 +32,9 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
+    - name: Lint install folder
+      run: composer check:install
+
     - name: Run test suite
       run: composer test
 
