chore(docker): update PHP version options and debug config

--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -25,6 +25,7 @@ PGSQL_IMAGE=postgres
 PGSQL_VERSION=16.3
 
 #PHP_VERSION=8
+#PHP_VERSION=8.4.0RC3
 #PHP_VERSION=8.3
 #PHP_VERSION=8.2
 PHP_VERSION=8.1
