--- a/.devcontainer/conf/pdns.conf
+++ b/.devcontainer/conf/pdns.conf
@@ -15,7 +15,7 @@ gpgsql-dbname=pdns
 webserver=yes
 webserver-address=0.0.0.0
 webserver-port=8081
-webserver-allow-from=192.168.0.0/16,127.0.0.1,::1
+webserver-allow-from=172.18.0.0/16,192.168.0.0/16,127.0.0.1,::1
 
 api=yes
 api-key=fxiBmBFx7MITw5ECRMOr10ghlxGMvWZA
