--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -100,6 +100,9 @@ services:
       - internal
     ports:
       - "8090:8080"
+    volumes:
+      - sqlite_data:/data
+      - ./adminer/login-password-less.php:/var/www/html/plugins-enabled/login-password-less.php
 
 #  ldap:
 #    image: dinkel/openldap
