--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "jeremykendall/php-domain-parser": "^6.3.1",
     "symfony/config": "^6.4.14",
     "symfony/console": "^6.4.17",
+    "symfony/filesystem": "^v6.4.13",
     "robmorgan/phinx": "^0.16.6",
     "symfony/string": "^6.4.15"
   },
@@ -43,17 +44,17 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^11.5.2",
-    "squizlabs/php_codesniffer": "^3.11.2"
+    "squizlabs/php_codesniffer": "^3.11.2",
+    "phpstan/phpstan": "^2.1",
+    "friendsofphp/php-cs-fixer": "^3.67"
   },
   "scripts": {
     "docs": "tools/phpDocumentor",
     "tests": "phpunit --testsuite unit",
     "tests:integration": "phpunit --testsuite integration",
-    "check:index": "phpcs --standard=phpcs.xml index.php",
-    "check:inc": "phpcs --standard=phpcs.xml inc",
-    "check:install": "phpcs --standard=phpcs.xml install",
-    "check:lib": "phpcs --standard=phpcs.xml lib",
-    "check:tests": "phpcs --standard=phpcs.xml tests",
-    "fix:install": "phpcbf --standard=phpcs.xml install"
+    "format:all": "phpcbf --standard=phpcs.xml index.php inc install lib tests",
+    "style:all": "php-cs-fixer fix -- index.php inc install lib tests",
+    "check:all": "phpcs --standard=phpcs.xml index.php inc install lib tests",
+    "analyse:all": "phpstan analyse index.php inc install lib tests"
   }
 }
