--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -33,10 +33,10 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
     - name: Check code
-      run: composer run check:install
+      run: composer check:install
 
 #    - name: Analyse code
-#      run: composer run analyse:all
+#      run: composer analyse:all
 
     - name: Run test suite
       run: composer tests
