--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     "phpunit/phpunit": "^11.5.2",
     "squizlabs/php_codesniffer": "^3.11.2",
     "phpstan/phpstan": "^2.1",
-    "friendsofphp/php-cs-fixer": "^3.67"
+    "friendsofphp/php-cs-fixer": "^3.67",
+    "vimeo/psalm": "^0.3.14"
   },
   "scripts": {
     "docs": "tools/phpDocumentor",
@@ -70,6 +71,7 @@
     "style:lib": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix -- lib",
     "style:tests": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix -- tests",
 
-    "analyse:all": "phpstan analyse index.php inc install lib tests"
+    "analyse:all": "phpstan analyse index.php inc install lib tests",
+    "check:psalm": "psalm"
   }
 }
