--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
     "squizlabs/php_codesniffer": "^3.11.2",
     "phpstan/phpstan": "^2.1",
     "friendsofphp/php-cs-fixer": "^3.67",
-    "vimeo/psalm": "^0.3.14"
+    "vimeo/psalm": "^0.3.14",
+    "phpmd/phpmd": "^2.15"
   },
   "scripts": {
     "docs": "tools/phpDocumentor",
@@ -72,6 +73,12 @@
     "style:tests": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix -- tests",
 
     "analyse:all": "phpstan analyse index.php inc install lib tests",
-    "check:psalm": "psalm"
+    "check:psalm": "psalm",
+
+    "check:phpmd:index": "phpmd index.php ansi cleancode,codesize,controversial,design,naming,unusedcode",
+    "check:phpmd:inc": "phpmd inc ansi cleancode,codesize,controversial,design,naming,unusedcode",
+    "check:phpmd:install": "phpmd install ansi cleancode,codesize,controversial,design,naming,unusedcode",
+    "check:phpmd:lib": "phpmd lib ansi cleancode,codesize,controversial,design,naming,unusedcode",
+    "check:phpmd:tests": "phpmd tests ansi cleancode,codesize,controversial,design,naming,unusedcode"
   }
 }
