chore(deps): bump symfony components to latest patch versions

--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
     "ext-pdo": "*",
     "twig/twig": "^3.20.0",
     "vlucas/valitron": "^v1.4.11",
-    "symfony/twig-bridge": "^v6.4.13",
-    "symfony/translation": "^v6.4.13",
+    "symfony/twig-bridge": "^6.4.19",
+    "symfony/translation": "^6.4.19",
     "twbs/bootstrap": "^v5.3.3",
     "twbs/bootstrap-icons": "^v1.11.3",
     "symfony/http-foundation": "^6.4.16",
-    "symfony/validator": "^6.4.17",
+    "symfony/validator": "^6.4.19",
     "psr/log": "^3.0.2",
     "jeremykendall/php-domain-parser": "^6.3.1",
     "symfony/config": "^6.4.14",
