--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,5 @@
 # These are supported funding model platforms
 
+github: edmondas
 open_collective: poweradmin
-# ko_fi: edmondas
-# liberapay: edmondas
-custom: [paypal.me/egirkantas]
+custom: [https://paypal.me/egirkantas]
