chore: remove direct config includes and add .nvmrc to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -47,5 +47,8 @@ Thumbs.db
 # PHP tools
 /.php-cs-fixer.cache
 
+# Node.js version manager
+/.nvmrc
+
 # Test plans are versioned but excluded from production packages
 # See tests/plans/ directory
